# Appointment_Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.vendor/annotated_doc-0.0.4.dist-info/: RECORD
.vendor/annotated_types-0.7.0.dist-info/: RECORD
.vendor/anyio-4.12.1.dist-info/: RECORD
.vendor/certifi-2026.2.25.dist-info/: RECORD
.vendor/click-8.1.8.dist-info/: RECORD
.vendor/coverage-7.10.7.dist-info/: RECORD
.vendor/exceptiongroup-1.3.1.dist-info/: RECORD
.vendor/fastapi-0.128.8.dist-info/: RECORD
.vendor/h11-0.16.0.dist-info/: RECORD
.vendor/httpcore-1.0.9.dist-info/: RECORD
.vendor/httpx-0.28.1.dist-info/: RECORD
.vendor/idna-3.11.dist-info/: RECORD
.vendor/iniconfig-2.1.0.dist-info/: RECORD
.vendor/packaging-26.0.dist-info/: RECORD
.vendor/pluggy-1.6.0.dist-info/: RECORD
.vendor/pydantic-2.12.5.dist-info/: RECORD
.vendor/pydantic_core-2.41.5.dist-info/: RECORD
.vendor/pydantic_settings-2.11.0.dist-info/: RECORD
.vendor/pygments-2.19.2.dist-info/: RECORD
.vendor/pytest-8.4.2.dist-info/: RECORD
.vendor/pytest_cov-7.1.0.dist-info/: RECORD
.vendor/python_dotenv-1.2.1.dist-info/: RECORD
.vendor/sqlalchemy-2.0.48.dist-info/: RECORD
.vendor/starlette-0.49.3.dist-info/: RECORD
.vendor/tomli-2.4.1.dist-info/: RECORD
.vendor/typing_extensions-4.15.0.dist-info/: RECORD
Docs/: DOCUMENTATION_STYLE_GUIDE.md
docker/: README.md
scripts/: check_google_calendar_access.py  docker_smoke_test.sh  docker_start.sh  get_google_refresh_token.py  run_tests.sh
tests/: conftest.py
(+579 files in other folders)
