[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appointment-agent"
version = "1.0.0"
description = "Versioned monorepo prototype for the LEKAB Appointment Agent."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
